--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <hr>
         <p style="line-height: 15px;font-size: 12px;margin-bottom: auto;">I am Kangyao Huang (黄康尧 in Chinese) from China, working towards AI and robotics research and application. Currently, I am pursuing a PhD degree in Computer Science at <a style="color:#6e02ba" href="https://www.tsinghua.edu.cn/">Tsinghua University(THU)</a> under the supervision of Prof. <a href="https://sites.google.com/site/thuliuhuaping">Huaping Liu</a>.
             Besides, I also hold an MRes degree in Control & Systems Engineering from <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/acse">ACSE</a>, <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/">the University of Sheffield(UoS)</a>, UK., supervised by Prof. <a href="https://scholar.google.co.uk/citations?user=W7ePGWYAAAAJ&hl=en">John Oyekan</a>, and a BEng degree in Aircraft Design & Engineering from <a style="color: rgb(25, 74, 179);" href="https://www.nwpu.edu.cn/">Northwestern Polytechnical
-            University (NWPU)</a>, China. I had several years start-up experience in aerospace and robotics sectors, serving as CEO, technical director, and UAV engineer.
+            University (NWPU)</a>, China. I had several years start-up experience in aerospace and robotics sectors, serving as CEO, technical director, and robotics engineer.
             <br>
-            <br> I have experience in EAI, UAV, and autonomous driving. I lead the development of the first generation of Tsinghua Mengshi intelligent flying car which is <b>the world's first pure electric rotorcraft unmanned flying vehicle</b> with integrated intelligent driving function. My current research interest is in Embodied AI for virtual and real world practice. I also follow ideas on aerial robotics and reconstruction. I am doing a startup @emNavi Tech, focusing on the EAI enhanced navigation and related sensors. If you have any ideas, please do not hesitate to email me directly.<br></p>
+            <br> I have experience in EAI, UAV, and autonomous driving. I lead the development of the first generation of Tsinghua Mengshi intelligent flying car which is <b>the world's first electric manned rotorcraft amphibious ground-aerial vehicle</b> with integrated intelligent driving function. My current research interest is in Embodied AI for virtual and real world practice. I also follow ideas on aerial robotics and reconstruction. I am doing a startup @emNavi Tech, focusing on the EAI enhanced navigation and related sensors. If you have any ideas, please do not hesitate to email me directly.<br></p>
     </section>
     <aside class="socialNetworkNavBar">
         <div class="socialNetworkNav"> 
@@ -980,7 +980,7 @@
                     <a style="font-size:9px; line-height: 3px;">Qihao Zhu, Qingjing Meng, Bo Cui, Songsong Rong, Haowen Shen, Guole Li, Huaping Liu, Jianxi Luo, Dafeng Jin, 
                         Jun Yang, Shuzhi Ge, Weiguo Yang, Yu Wan, Zhiqiang Yang, Zhenlong Ding, Xiaofeng Xu, Jiang Qian, Chaoyang Ha, Yuanhao Huang, Qiujiang Wu, Xingang Wu, Qifan Tan, Mo Zhou, Yang Shen, Li Wang, Yan Han, Zhaosheng Huang, Zhiwei Li, Lei Yang, Linxun Shi, Dazhong Xu, Kai Tang, et cetera.</a>
                 </h3>
-                <p style="font-size: 10px;color: rgb(135, 4, 187);">We successfully developed the first generation of Tsinghua Mengshi intelligent flying car. This vehicle is the world's first pure electric rotorcraft unmanned flying vehicle with integrated intelligent driving function.
+                <p style="font-size: 10px;color: rgb(135, 4, 187);">We successfully developed the first generation of Tsinghua Mengshi intelligent flying car. This vehicle is the world first electric manned rotorcraft amphibious ground-aerial vehicle with integrated intelligent driving function.
                 </p>
             </section>
         </div>
