--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="dropdown"><span></span><a href="publications/2024_CoRL_Learning a Distributed Hierarchical Locomotion Controller for Embodied Cooperation.pdf" target="_blank">Paper</a></div>
+                <div class="dropdown"><span></span><a href="https://proceedings.mlr.press/v270/hong25a.html" target="_blank">Paper</a></div>
                 <div class="dropdown"><span></span><a href="" target="_blank">Code</a></div>
                 <div class="dropdown"><span></span><a href="https://d-hrl.github.io/" target="_blank">Video</a></div>
             </aside>
@@ -406,7 +406,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="dropdown"><span></span><a href="publications/2024_IJCAI_CompetEvo.pdf" target="_blank">Paper</a></div>
+                <div class="dropdown"><span></span><a href="https://dl.acm.org/doi/abs/10.24963/ijcai.2024/10" target="_blank">Paper</a></div>
                 <div class="dropdown"><span></span><a href="https://github.com/KJaebye/competevo" target="_blank">Code</a></div>
                 <div class="dropdown"><span></span><a href="https://competevo.github.io/" target="_blank">Video</a></div>
             </aside>
@@ -471,7 +471,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="dropdown"><span></span><a href="publications/2024_ICRA_Stimulate the potential of robots via competition.pdf" target="_blank">Paper</a></div>
+                <div class="dropdown"><span></span><a href="https://ieeexplore.ieee.org/abstract/document/10611581" target="_blank">Paper</a></div>
                 <div class="dropdown"><span></span><a href="https://github.com/KJaebye/Multiagent-Race" target="_blank">Code</a></div>
                 <div class="dropdown"><span></span><a href="https://youtu.be/If7brGEzYNs" target="_blank">Video</a></div>
             </aside>
@@ -668,7 +668,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="dropdown"><span></span><a href="https://arxiv.org/pdf/2305.08178.pdf" target="_blank">Paper</a></div>
+                <div class="dropdown"><span></span><a href="https://ieeexplore.ieee.org/abstract/document/10156162" target="_blank">Paper</a></div>
                 <div class="dropdown"><span></span><a href="https://github.com/THU-MIR/ABAS_matlab" target="_blank">Code</a></div>
             </aside>
         </div>
@@ -790,7 +790,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="dropdown"><span></span><a href="https://arxiv.org/pdf/2207.11384.pdf" target="_blank">Paper</a></div>
+                <div class="dropdown"><span></span><a href="https://ieeexplore.ieee.org/abstract/document/9839587" target="_blank">Paper</a></div>
             </aside>
         </div>
         <br>
