--- a/index.html
+++ b/index.html
@@ -220,9 +220,58 @@
 <!-- content -->
 <section class="mainContent"> 
     <section class="section2">
-        <h2 class="sectionTitle">Publications</h2>
+        <h2 class="sectionTitle">Selected Publications</h2>
         <!-- <hr class="sectionTitleRule"> -->
         <hr class="sectionTitleRule2">
+
+        <!--nature review ee-->
+        <div onmouseout="nree_stop()" onmouseover="nree_start()">	  
+            <div class="sectionContent" style="padding:0px;vertical-align:middle">
+                <div class="one">
+                    <div class="two" id="nree_image">
+                        <!-- <video  width="100%" height="100%" muted="" autoplay="" loop="">
+                            <source src="material/nree.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video> -->
+                    </div>
+                    <img src="material/2025nree.png" width="100%" height="100%">
+                </div>
+                <script type="text/javascript">
+                    function nree_start() {
+                    document.getElementById('nree_image').style.opacity = "1";
+                    }
+
+                    function nree_stop() {
+                    document.getElementById('nree_image').style.opacity = "0";
+                    }
+                    nree_stop()
+                </script>
+            </div>
+            <section class="section2Content">
+                <h2 class="sectionContentTitle"> Learning for Embodiment and Embodiment for Learning </h2>
+                <h3 class="sectionContentSubTitle"> 
+                    <a href="https://scholar.google.com.hk/citations?user=HXnkIkwAAAAJ" target="_blank">Huaping Liu</a><ion-icon name="mail-outline"></ion-icon>,
+                    <a href="https://scholar.google.com.hk/citations?user=OCauNHUAAAAJ" target="_blank">Di Guo</a>, 
+                    <b>Kangyao Huang</b>
+                </h3>
+                <h3 class="sectionContentSubTitle">
+                    <em> <b>Nature</b> Reviews Electrical Engineering 2025</em> 
+                    <em></em>
+                    <!-- <a style="color: rgb(247, 121, 175);font-weight: bold;font-style: oblique;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">IF: 14</a> -->
+                </h3>
+            </section>
+            <aside class="externalResourcesNav" style="margin-top:0%">
+                <div class="dropdown"> <span>Abstract</span>
+                    <div class="dropdown-content">
+                        <p style="text-align:left;font-size: 10px;">
+                            Learning and embodiment are intertwined, resulting in a mutually reinforcing effect. Research should aim not only for learning to enhance embodiment, but also, more importantly, for embodiment to facilitate learning. Achieving synergy between these two aspects remains an ongoing challenge
+                        </p>
+                    </div>
+                </div>
+                <div class="dropdown"><span></span><a href="https://doi.org/10.1038/s44287-025-00203-4" target="_blank">Paper</a></div>
+            </aside>
+        </div>
+        <br>
 
         <!-- airgym-->
         <div onmouseout="airgym_stop()" onmouseover="airgym_start()">	  
