--- a/index.html
+++ b/index.html
@@ -1226,6 +1226,34 @@
     </section>
 
     <br>
+    <!-- Award -->
+    <section class="section2">
+        <h2 class="sectionTitle">Awards</h2>
+        <hr class="section2">
+
+        <div class="section2" style="padding:0px;vertical-align:middle;line-height: 5px;">
+            <group>
+                <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2021,&ensp;</h3>
+                <h3 class="sectionContentSubTitle">
+                    <a style="font-weight: bold;">Bronze Medal </a>at the International Exhibition of Inventions of Geneva （日内瓦发明奖铜奖）
+                </h3>
+            </group>
+            <group>
+                <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2024,&ensp;</h3>
+                <h3 class="sectionContentSubTitle">
+                    Yang Huiyan Scholarship at Tsinghua University（惠妍英才奖学金-清华大学）
+                </h3>
+            </group>
+            <group>
+                <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2025,&ensp;</h3>
+                <h3 class="sectionContentSubTitle">
+                    <a style="font-weight: bold;">First Prize</a> at CICC Science and Technology Progress Award-Technology Invention（中国指控学会科技进步奖技术发明类一等奖）无人系统具身交互感知关键技术及应用
+                </h3>
+            </group>
+        </div>
+    </section>
+
+    <br>
     <!-- Experiences -->
     <section class="section2">
         <h2 class="sectionTitle">Experiences</h2>
