--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
     <!-- Identity details -->
     <section class="profileHeader">
         <h1 style="line-height: 30px;font-size: 28px;margin-bottom: auto;">Kangyao Huang&emsp;&emsp;<img src="profile/name.png" width="80" style="margin-bottom: -5px;"></h1>
-        <h3>PhD Candidate | AI Researcher | Aerospace & Robotics Engineer</h3>
+        <h3>PhD Candidate | Physical AI Researcher | Aerospace Engineer</h3>
         <hr>
         <p style="line-height: 15px;font-size: 12px;margin-bottom: auto;">I am Kangyao Huang (黄康尧 in Chinese) from China, working towards AI and robotics research and application. Currently, I am pursuing a PhD degree in Computer Science at <a style="color:#6e02ba" href="https://www.tsinghua.edu.cn/">Tsinghua University(THU)</a> under the supervision of Prof. <a href="https://sites.google.com/site/thuliuhuaping">Huaping Liu</a> and Prof. <a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm">Xiangyang Ji</a>.
-            Besides, I also hold an MRes degree in Control & Systems Engineering from <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/acse">ACSE</a>, <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/">the University of Sheffield(UoS)</a>, UK., supervised by Prof. <a href="https://scholar.google.co.uk/citations?user=W7ePGWYAAAAJ&hl=en">John Oyekan</a>, and a BEng degree in Aircraft Design & Engineering from <a style="color: rgb(25, 74, 179);" href="https://www.nwpu.edu.cn/">Northwestern Polytechnical
-            University (NWPU)</a>, China. I had several years start-up experience in aerospace and robotics sectors, serving as CEO, technical director, and robotics engineer.
+            Besides, I also hold an MRes degree in Robotics from <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/acse">ACSE</a>, <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/">the University of Sheffield(UoS)</a>, UK., supervised by Prof. <a href="https://scholar.google.co.uk/citations?user=W7ePGWYAAAAJ&hl=en">John Oyekan</a>, and a BEng degree in Aircraft Design & Engineering from <a style="color: rgb(25, 74, 179);" href="https://www.nwpu.edu.cn/">Northwestern Polytechnical University (NWPU)</a>, China. I had several years start-up experience in aerospace and robotics sectors, serving as CEO, technical director, and robotics engineer.
             <br>
-            <br> I have experience in EAI, UAV, and autonomous driving. I lead the development of the first generation of Tsinghua Mengshi intelligent flying car which is <b>the world's first electric manned rotorcraft amphibious ground-aerial vehicle</b> with integrated intelligent driving function. My current research interest is in Embodied AI for virtual and real world practice. I also follow ideas on aerial robotics and reconstruction. I am doing a startup @emNavi Tech, focusing on the EAI enhanced navigation and related sensors. If you have any ideas, please do not hesitate to email me directly.<br></p>
+            <br> I have experience in EAI, UAV, and autonomous driving. I led the development of the second/third generation of Tsinghua Mengshi flying car which is <b>the world's first electric manned rotorcraft ground-aerial vehicle</b> with integrated intelligent driving function. My current research interest is in Embodied AI for virtual and real world practice. I also follow ideas on aerial robotics and reconstruction. I am doing a startup @emNavi Tech, focusing on the EAI enhanced navigation and related sensors. If you have any ideas, please do not hesitate to email me directly.<br></p>
     </section>
     <aside class="socialNetworkNavBar">
         <div class="socialNetworkNav"> 
@@ -63,52 +62,6 @@
         <h2 class="sectionTitle">Top Open-source Projects</h2>
         <!-- <hr class="sectionTitleRule"> -->
         <hr class="sectionTitleRule2">
-
-    <!-- emNavi  -->
-    <div onmouseout="emNavi_stop()" onmouseover="emNavi_start()">	  
-        <div class="sectionContent" style="padding:0px;vertical-align:middle">
-            <div class="one">
-                <div class="two" id="emNavi_image">
-                    <video  width="100%" height="100%" muted="" autoplay="" loop="">
-                        <source src="material/X152b-ego.mp4" type="video/mp4">
-                        Your browser does not support the video tag.
-                    </video>
-                </div>
-                <img src="material/X152b-ego.jpg" width="100%">
-            </div>
-            <script type="text/javascript">
-                function emNavi_start() {
-                document.getElementById('emNavi_image').style.opacity = "1";
-                }
-
-                function emNavi_stop() {
-                document.getElementById('emNavi_image').style.opacity = "0";
-                }
-                emNavi_stop()
-            </script>
-        </div>
-        <section class="section2Content">
-            <h2 class="sectionContentTitle"><img src="material/logo1.png" alt="emNavi" style="height: 50px; vertical-align: middle;"></h2>
-                <p style="font-size: 12px;"><b>emNavi</b> derives from "Embodied Navigation". 
-                    The vision of emNavi is to make navigation more intelligent. Besides, emNavi is an open-sourced project that re-construct and optimize the navigation-related SoTA (state of the art) 
-                    algorithms and apply them on robots, especially aerial robots, to promote the implementation of Embodied AI 
-                    on mobile robots. </p>
-            </h2>
-
-        </section>
-        <aside class="externalResourcesNav" style="margin-top:0%"> 
-            <div class="dropdown">
-                <span></span><a href="https://emnavi.tech/" target="_blank"><b>emNavi</b></a>
-            </div>
-            <div class="dropdown">
-                <span></span><a href="https://emnavi.tech/droneKit/" target="_blank">X152b</a>
-            </div>
-            <div class="dropdown">
-                <span></span><a href="https://emnavi.tech/AirGym/" target="_blank">Sim2Real</a>
-            </div>
-        </aside>
-    </div>
-    <br>
 
     <!-- AirGym-Sim  -->
     <div onmouseout="airgym_sim_stop()" onmouseover="airgym_sim_start()">	  
@@ -149,6 +102,7 @@
         </aside>
     </div>
     <br>
+
 
 </section>
 
@@ -225,7 +179,7 @@
         <hr class="sectionTitleRule2">
 
         <!-- ral compet drone-->
-        <div onmouseout="competdrone_stop()" onmouseover="competdrone_start()">	  
+        <!-- <div onmouseout="competdrone_stop()" onmouseover="competdrone_start()">	  
             <div class="sectionContent" style="padding:0px;vertical-align:middle">
                 <div class="one">
                     <div class="two" id="competdrone_image">
@@ -276,7 +230,7 @@
                 <div class="dropdown"><span></span><a href="" target="_blank">Code</a></div>
             </aside>
         </div>
-        <br>
+        <br> -->
 
         <!--nature review ee-->
         <div onmouseout="nree_stop()" onmouseover="nree_start()">	  
@@ -1027,6 +981,52 @@
         <!-- <hr class="sectionTitleRule"> -->
         <hr class="sectionTitleRule2">
 
+        <!-- emNavi  -->
+        <div onmouseout="emNavi_stop()" onmouseover="emNavi_start()">	  
+            <div class="sectionContent" style="padding:0px;vertical-align:middle">
+                <div class="one">
+                    <div class="two" id="emNavi_image">
+                        <video  width="100%" height="100%" muted="" autoplay="" loop="">
+                            <source src="material/X152b-ego.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                    </div>
+                    <img src="material/X152b-ego.png" width="100%">
+                </div>
+                <script type="text/javascript">
+                    function emNavi_start() {
+                    document.getElementById('emNavi_image').style.opacity = "1";
+                    }
+
+                    function emNavi_stop() {
+                    document.getElementById('emNavi_image').style.opacity = "0";
+                    }
+                    emNavi_stop()
+                </script>
+            </div>
+            <section class="section2Content">
+                <h2 class="sectionContentTitle"><img src="material/logo1.png" alt="emNavi" style="height: 30px; vertical-align: middle;"></h2>
+                    <p style="font-size: 12px;"><b>emNavi</b> derives from "Embodied Navigation". 
+                        The vision of emNavi is to make navigation more intelligent. Besides, emNavi is an open-sourced project that re-construct and optimize the navigation-related SoTA (state of the art) 
+                        algorithms and apply them on robots, especially aerial robots, to promote the implementation of Embodied AI 
+                        on mobile robots. </p>
+                </h2>
+
+            </section>
+            <aside class="externalResourcesNav" style="margin-top:0%"> 
+                <div class="dropdown">
+                    <span></span><a href="https://emnavi.tech/" target="_blank">emNavi</a>
+                </div>
+                <div class="dropdown">
+                    <span></span><a href="https://emnavi.tech/droneKit/" target="_blank">X152b</a>
+                </div>
+                <div class="dropdown">
+                    <span></span><a href="https://emnavi.tech/AirGym/" target="_blank">Sim2Real</a>
+                </div>
+            </aside>
+        </div>
+        <br>
+
         <!-- flyingcar  -->
         <div onmouseout="flyingcar_stop()" onmouseover="flyingcar_start()">	  
             <div class="sectionContent" style="padding:0px;vertical-align:middle">
@@ -1289,7 +1289,7 @@
             <group>
                 <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2021,&ensp;</h3>
                 <h3 class="sectionContentSubTitle">
-                    <a style="font-weight: bold;">Bronze Medal </a>at the International Exhibition of Inventions of Geneva （日内瓦发明奖铜奖）
+                    Bronze Medal at the International Exhibition of Inventions of Geneva （日内瓦发明奖铜奖）
                 </h3>
             </group>
             <group>
