--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h3>PhD Candidate | Physical AI Researcher | Aerospace Engineer</h3>
         <hr>
         <p style="line-height: 15px;font-size: 12px;margin-bottom: auto;">I am Kangyao Huang (黄康尧 in Chinese) from China, working towards physical AI and robotics research and application. Currently, I am pursuing a PhD degree in Computer Science at <a style="color:#6e02ba" href="https://www.tsinghua.edu.cn/">Tsinghua University(THU)</a> under the supervision of Prof. <a href="https://sites.google.com/site/thuliuhuaping">Huaping Liu</a>, working closely with Prof. <a href="https://www.au.tsinghua.edu.cn/info/1111/1524.htm">Xiangyang Ji</a>, and focusing on reinforcement learning, simulation, and autonomous systems.
-            Besides, I also hold an MRes degree in Robotics from <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/acse">ACSE</a>, <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/">the University of Sheffield(UoS)</a>, UK., supervised by Prof. <a href="https://scholar.google.co.uk/citations?user=W7ePGWYAAAAJ&hl=en">John Oyekan</a>, and a BEng degree in Aircraft Design & Engineering from <a style="color: rgb(25, 74, 179);" href="https://www.nwpu.edu.cn/">Northwestern Polytechnical University (NWPU)</a>, China. I had several years start-up experience in aerospace and robotics sectors, serving as CEO, technical director, and robotics engineer.
+            Besides, I also hold an MRes degree in Robotics from <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/acse">ACSE</a>, <a style="color: rgb(5, 103, 196);" href="https://www.sheffield.ac.uk/">the University of Sheffield(UoS)</a>, UK., supervised by Prof. <a href="https://scholar.google.co.uk/citations?user=W7ePGWYAAAAJ&hl=en">John Oyekan</a>, and a BEng degree in Astronautics from <a style="color: rgb(25, 74, 179);" href="https://www.nwpu.edu.cn/">Northwestern Polytechnical University (NWPU)</a>, China. I had several years start-up experience in aerospace and robotics sectors, serving as CEO, technical director, and robotics engineer.
             <br>
             <br> I also have experience in EAI, UAV, and autonomous driving. I led the development of the second/third generation of Tsinghua Mengshi flying car which is <b>the world's first electric manned rotorcraft ground-aerial vehicle</b> with integrated intelligent driving function. My current research interest is in Embodied AI for virtual and real world practice. I also follow ideas on aerial robotics and reconstruction. I am doing a startup @emNavi Tech, focusing on the EAI enhanced navigation and related sensors. If you have any ideas, please do not hesitate to email me directly.<br></p>
     </section>
@@ -1158,7 +1158,7 @@
                     <b>Work with</b>
                     <a style="color: #999;">Colleagues </a><a style="font-style: italic;">@Bingo Intelligence Co., Ltd.</a>
                 </h3>
-                <p style="font-size: 10px;"><b>Brief:</b> This research focused on enhancing the endurance of solar-powered unmanned aerial vehicles (UAVs). A key aspect of the study involved redesigning the aerodynamic shape to improve efficiency. Additionally, our team developed a dynamic power system with low vortex drag variable-pitch propellers to adapt to varying wind speeds during flight, enabling them to operate efficiently across diverse conditions. This research contributes to the advancement of renewable energy-powered UAV technology, offering potential applications in various fields such as environmental monitoring, aerial photography, and telecommunications.</p>
+                <p style="font-size: 10px;"><b>Brief:</b> We built a solar-powered unmanned aerial vehicles and focused on enhancing the endurance. A key aspect of this involved redesigning the aerodynamic shape to improve efficiency. Additionally, our team developed a dynamic power system with low vortex drag variable-pitch propellers to adapt to varying wind speeds during flight, enabling them to operate efficiently across diverse conditions. This research contributes to the advancement of renewable energy-powered UAV technology, offering potential applications in various fields such as environmental monitoring, aerial photography, and telecommunications.</p>
                 <p style="font-size: 10px;color: rgba(1, 145, 193, 0.579);">
                 We honor the memory of Zhaoxi Wang, one of co-founders of the team, whose dedication and vision continue to inspire us as we move forward, and his spirit will forever remain an integral part of our journey,just like his aircraft did.
                 </p>
@@ -1196,12 +1196,7 @@
                     <a style="color: #999;">Colleagues </a><a style="font-style: italic;">@Bingo Intelligence Co., Ltd.</a>
                 </h3>
                 <p style="font-size: 10px;"><b>Brief:</b> This project focused on the development of an autonomous inspection drone 
-                    system for airports. This project encompassed the overall design of the airport system and the design and production 
-                    of electromechanical controls. We prioritized the autonomous inspection functionality of the drones. Through a 
-                    comprehensive approach balancing airport safety and efficiency, we devised a complete system including structural 
-                    design of the drones, development of electromechanical control systems, and optimization of inspection algorithms. 
-                    This system not only enables comprehensive inspection of airport facilities but also autonomously responds to and 
-                    alerts to anomalies.</p>
+                    system for airports. This project encompassed the overall design of the airport system and the design and production of electromechanical controls. We prioritized the autonomous inspection functionality of the drones. Through a comprehensive approach balancing airport safety and efficiency, we devised a complete system including structural design of the drones, development of electromechanical control systems, and optimization of inspection algorithms. This system not only enables comprehensive inspection of airport facilities but also autonomously responds to and alerts to anomalies.</p>
             </section>
         </div>
         <br>
@@ -1289,10 +1284,16 @@
             <group>
                 <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2021,&ensp;</h3>
                 <h3 class="sectionContentSubTitle">
-                    Bronze Medal at the International Exhibition of Inventions of Geneva （日内瓦发明奖铜奖）
+                    Bronze Medal at the International Exhibition of Inventions of Geneva
                 </h3>
             </group>
             <group>
+                <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2021,&ensp;</h3>
+                <h3 class="sectionContentSubTitle">
+                    Best Student Paper Award at Chinese Intelligent Automation Conference (CIAC)
+                </h3>
+            </group>
+            <!-- <group>
                 <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2024,&ensp;</h3>
                 <h3 class="sectionContentSubTitle">
                     Yang Huiyan Scholarship at Tsinghua University（惠妍英才奖学金-清华大学）
@@ -1303,7 +1304,7 @@
                 <h3 class="sectionContentSubTitle">
                     HuangPu Scholarship at Tsinghua University（黄埔英才奖学金-清华大学）
                 </h3>
-            </group>
+            </group> -->
             <group>
                 <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2025,&ensp;</h3>
                 <h3 class="sectionContentSubTitle">
@@ -1335,7 +1336,7 @@
             <group>
                 <h3 class="sectionContentSubTitle" style="font-weight: bold;font-style: italic;">2023~now,&emsp;</h3>
                 <h3 class="sectionContentSubTitle">
-                    <a style="font-weight: bold;">Founder</a> <a>@超微智导技术</a></a>, China
+                    <a style="font-weight: bold;">Founder</a> & Aerospace Engineer <a>@超微智导技术</a></a>, China
                 </h3>
             </group>
         </div>
