--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <hr class="sectionTitleRule2">
 
         <!-- ral compet drone-->
-        <!-- <div onmouseout="competdrone_stop()" onmouseover="competdrone_start()">	  
+        <div onmouseout="competdrone_stop()" onmouseover="competdrone_start()">	  
             <div class="sectionContent" style="padding:0px;vertical-align:middle">
                 <div class="one">
                     <div class="two" id="competdrone_image">
@@ -226,11 +226,11 @@
                         </p>
                     </div>
                 </div>
-                <div class="dropdown"><span></span><a href="" target="_blank">Paper</a></div>
-                <div class="dropdown"><span></span><a href="" target="_blank">Code</a></div>
+                <div class="dropdown"><span></span><a href="https://ieeexplore.ieee.org/document/11283021" target="_blank">Paper</a></div>
+                <div class="dropdown"><span></span><a href="https://github.com/emNavi/AirGym" target="_blank">Code</a></div>
             </aside>
         </div>
-        <br> -->
+        <br>
 
         <!--nature review ee-->
         <div onmouseout="nree_stop()" onmouseover="nree_start()">	  
@@ -336,7 +336,7 @@
                     </div>
                 </div>
                 <div class="dropdown"><span></span><a href="" target="_blank">Paper</a></div>
-                <div class="dropdown"><span></span><a href="" target="_blank">Code</a></div>
+                <div class="dropdown"><span></span><a href="https://github.com/emNavi/AirGym" target="_blank">Code</a></div>
                 <div class="dropdown"><span></span><a href="https://emnavi.tech/AirGym/" target="_blank">Video</a></div>
             </aside>
         </div>
