--- a/index.html
+++ b/index.html
@@ -936,11 +936,11 @@
                 <div class="one">
                     <div class="two" id="tiv_image">
                         <video  width="100%" muted="" autoplay="" loop="">
-                            <source src="material/2022tiv.mp4" type="video/mp4">
+                            <source src="material/2022tiv_1.mp4" type="video/mp4">
                             Your browser does not support the video tag.
                         </video>
                     </div>
-                    <img src="material/2022tiv.jpg" width="100%">
+                    <img src="material/2022tiv_1.png" width="100%">
                 </div>
                 <script type="text/javascript">
                     function tiv_start() {
@@ -1056,7 +1056,7 @@
                             Your browser does not support the video tag.
                         </video>
                     </div>
-                    <img src="material/2021SWEVO.jpg" width="100%">
+                    <img src="material/2021SWEVO.png" width="100%">
                 </div>
                 <script type="text/javascript">
                     function swevo_start() {
